--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -23,9 +23,6 @@
 
 
 
-
-
-
 body,
 input,
 textarea,
@@ -787,6 +784,7 @@ h6,
 #extHeader15-51 SPAN {
   font-size: 20px;
   font-family: 'Raleway', sans-serif;
+  color: #ffffff;
 }
 #header3-5g .mbr-section-title,
 #header3-5g .mbr-section-subtitle {
@@ -794,6 +792,76 @@ h6,
 }
 #header3-5g .mbr-section-title {
   font-size: 18px;
+}
+#header3-5g .mbr-section-title DIV {
+  color: #232323;
+  font-size: 17px;
+}
+#extTable1-23 .mbr-section-title {
+  color: #ffffff;
+  font-size: 22px;
+  font-family: 'Raleway', sans-serif;
+}
+#extTable1-23 TH {
+  color: #ffffff;
+  font-size: 17px;
+}
+#extTable1-23 TD {
+  color: #ffffff;
+  font-size: 17px;
+}
+#extTable1-23 B {
+  color: #f7da64;
+  font-size: 17px;
+}
+#extTable1-23 .mbr-section-title SPAN {
+  font-size: 18px;
+}
+#extAccordion1-5o H1 {
+  font-size: 18px;
+}
+#content1-2v DIV {
+  text-align: left;
+  color: #ffffff;
+}
+#content1-2v P {
+  text-align: left;
+  color: #ffffff;
+}
+#extTable1-k .mbr-section-title {
+  font-family: 'Raleway', sans-serif;
+  font-size: 22px;
+  color: #ffffff;
+}
+#extTable1-k TH {
+  font-size: 17px;
+}
+#extTable1-k B {
+  font-size: 17px;
+}
+#extTable1-k TD {
+  font-size: 17px;
+}
+#extToggle1-24 P {
+  font-size: 17px;
+}
+#extToggle1-24 H1 {
+  font-size: 25px;
+  font-family: 'Raleway', sans-serif;
+}
+#content5-29 .mbr-section-title,
+#content5-29 p {
+  color: #fff;
+}
+#content5-29 DIV {
+  color: #ffffff;
+}
+#content5-29 .mbr-section-title {
+  font-size: 21px;
+  font-family: 'Raleway', sans-serif;
+}
+#content5-29 .mbr-section-title SPAN {
+  font-size: 17px;
 }
 #extHeader3-58 H3 {
   font-size: 32px;
@@ -863,75 +931,6 @@ h6,
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
 }
-#msg-box1-2y H2 {
-  font-family: 'Raleway', sans-serif;
-  color: #000000;
-  text-align: left;
-}
-#msg-box1-2y H3 {
-  font-family: 'Raleway', sans-serif;
-  font-size: 23px;
-}
-#msg-box1-2y SPAN {
-  font-size: 17px;
-  color: #1141f4;
-}
-#content1-2v DIV {
-  text-align: left;
-  color: #ffffff;
-}
-#content1-2v P {
-  text-align: left;
-  color: #ffffff;
-}
-#extTable1-23 .mbr-section-title {
-  color: #ffffff;
-  font-size: 22px;
-  font-family: 'Raleway', sans-serif;
-}
-#extTable1-23 TH {
-  color: #ffffff;
-  font-size: 17px;
-}
-#extTable1-23 TD {
-  color: #ffffff;
-  font-size: 17px;
-}
-#extTable1-23 B {
-  color: #f7da64;
-  font-size: 20px;
-}
-#content2-3o BLOCKQUOTE {
-  font-family: 'Raleway', sans-serif;
-}
-#extTable1-k .mbr-section-title {
-  font-family: 'Raleway', sans-serif;
-  font-size: 22px;
-  color: #ffffff;
-}
-#extTable1-k TH {
-  font-size: 17px;
-}
-#extTable1-k B {
-  font-size: 17px;
-}
-#extTable1-k TD {
-  font-size: 17px;
-}
-#content5-29 .mbr-section-title,
-#content5-29 p {
-  color: #fff;
-}
-#content5-29 DIV {
-  color: #ffffff;
-}
-#content5-29 .mbr-section-title {
-  font-size: 21px;
-  font-family: 'Raleway', sans-serif;
-}
-#content5-29 .mbr-section-title SPAN {
-  font-size: 17px;
-}
 #custom-html-3i {
   /* Type valid CSS here */
 }
@@ -949,13 +948,6 @@ h6,
 }
 #extFeatures5-3c .wraper {
   border-color: #1141f4 !important;
-}
-#extToggle1-24 P {
-  font-size: 17px;
-}
-#extToggle1-24 H1 {
-  font-size: 25px;
-  font-family: 'Raleway', sans-serif;
 }
 #extFeatures13-h .etl-icon {
   color: #666666;
