--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1389,3 +1389,308 @@ h6,
   font-size: 84px;
   text-align: center;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#ext_menu-5p .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-5p .navbar-caption {
+  color: #ffffff;
+  font-size: 20px;
+}
+#ext_menu-5p .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-5p .close-icon::before,
+#ext_menu-5p .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-5p .link,
+#ext_menu-5p .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-5p .link {
+  font-size: 0.75rem;
+}
+#ext_menu-5p .dropdown-item,
+#ext_menu-5p .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-5p .link:hover,
+#ext_menu-5p .dropdown-item:hover,
+#ext_menu-5p .link:focus,
+#ext_menu-5p .dropdown-item:focus {
+  color: #e25041;
+}
+#ext_menu-5p .link[aria-expanded="true"],
+#ext_menu-5p .dropdown-menu {
+  background: #1f5087;
+}
+#ext_menu-5p .nav-dropdown-sm .link:focus,
+#ext_menu-5p .nav-dropdown-sm .link:hover,
+#ext_menu-5p .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-5p .nav-dropdown-sm .dropdown-item:hover {
+  background: #2662a4!important;
+}
+#ext_menu-5p .navbar,
+#ext_menu-5p .nav-dropdown-sm,
+#ext_menu-5p .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-5p .nav-dropdown-sm .dropdown-menu {
+  background: #2969b0;
+}
+#ext_menu-5p .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-5p .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-5p .bg-color.transparent.opened .link:hover,
+#ext_menu-5p .bg-color.transparent.opened .link:focus {
+  color: #e25041;
+}
+#ext_menu-5p .link[aria-expanded="true"],
+#ext_menu-5p .dropdown-item[aria-expanded="true"] {
+  color: #e25041!important;
+}
+#ext_menu-5p .btn {
+  font-size: 12px;
+}
+#extHeader15-5q P {
+  font-family: 'Lato', sans-serif;
+  text-align: center;
+}
+#extHeader15-5q SPAN {
+  font-size: 20px;
+  font-family: 'Raleway', sans-serif;
+  color: #ffffff;
+}
+#header3-5s .mbr-section-title,
+#header3-5s .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-5s .mbr-section-title {
+  font-size: 18px;
+}
+#header3-5s .mbr-section-title DIV {
+  color: #232323;
+  font-size: 17px;
+}
+#header3-5s .mbr-section-subtitle {
+  color: #000000;
+}
+#extTable1-5t .mbr-section-title {
+  color: #ffffff;
+  font-size: 22px;
+  font-family: 'Raleway', sans-serif;
+}
+#extTable1-5t TH {
+  color: #ffffff;
+  font-size: 17px;
+}
+#extTable1-5t TD {
+  color: #ffffff;
+  font-size: 17px;
+}
+#extTable1-5t B {
+  color: #f7da64;
+  font-size: 17px;
+}
+#extTable1-5t .mbr-section-title SPAN {
+  font-size: 18px;
+}
+#content1-5v DIV {
+  text-align: left;
+  color: #ffffff;
+}
+#content1-5v P {
+  text-align: left;
+  color: #ffffff;
+}
+#extTable1-5w .mbr-section-title {
+  font-family: 'Raleway', sans-serif;
+  font-size: 22px;
+  color: #ffffff;
+}
+#extTable1-5w TH {
+  font-size: 17px;
+}
+#extTable1-5w B {
+  font-size: 17px;
+}
+#extTable1-5w TD {
+  font-size: 17px;
+}
+#content5-5y .mbr-section-title,
+#content5-5y p {
+  color: #fff;
+}
+#content5-5y DIV {
+  color: #ffffff;
+}
+#content5-5y .mbr-section-title {
+  font-size: 17px;
+  font-family: 'Raleway', sans-serif;
+}
+#content5-5y .mbr-section-title SPAN {
+  font-size: 17px;
+}
+#extHeader3-5z H3 {
+  font-size: 32px;
+  text-align: center;
+}
+#extHeader3-5z P {
+  font-size: 18px;
+  text-align: center;
+}
+#extHeader3-5z DIV {
+  text-align: left;
+}
+#features6-60 P {
+  font-size: 17px;
+  color: #ffffff;
+}
+#features6-60 H4 {
+  color: #ffffff;
+}
+#content2-61 BLOCKQUOTE {
+  font-family: 'Raleway', sans-serif;
+}
+#content2-61 P {
+  color: #1141f4;
+}
+#content5-63 .mbr-section-title,
+#content5-63 p {
+  color: #fff;
+}
+#content5-63 DIV {
+  color: #ffffff;
+}
+#msg-box3-64 .mbr-section-title,
+#msg-box3-64 p {
+  color: #000;
+}
+#msg-box3-64 .mbr-section-title {
+  font-size: 23px;
+  font-family: 'Raleway', sans-serif;
+  text-align: left;
+}
+#msg-box3-64 .lead P {
+  text-align: left;
+}
+#msg-box3-64 .lead {
+  text-align: left;
+}
+#msg-box3-64 .lead DIV {
+  text-align: left;
+  font-family: 'Raleway', sans-serif;
+}
+#extFeatures1-65 .mbr-section-title {
+  color: #fff;
+  font-size: 30px;
+}
+#extFeatures1-65 P {
+  font-size: 19px;
+}
+#msg-box5-67 P {
+  font-size: 21px;
+}
+#msg-box5-67 .btn {
+  font-size: 16px;
+}
+#extMsg-box4-68 SPAN {
+  font-size: 24px;
+  font-family: 'Raleway', sans-serif;
+}
+#extMsg-box4-68 P {
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+}
+#custom-html-6b {
+  /* Type valid CSS here */
+}
+#custom-html-6b .my-image {
+  width: 100%;
+}
+#custom-html-6c {
+  /* Type valid CSS here */
+}
+#custom-html-6c .my-image {
+  width: 100%;
+}
+#extFeatures5-6d .mbr-iconfont-features4 {
+  color: #1141f4 !important;
+}
+#extFeatures5-6d .wraper {
+  border-color: #1141f4 !important;
+}
+#extFeatures13-6e .etl-icon {
+  color: #666666;
+}
+#extFeatures13-6e .mbr-section-subtitle {
+  font-family: 'Raleway', sans-serif;
+  font-size: 19px;
+  color: #ffffff;
+}
+#extFeatures13-6e .mbr-section-title {
+  font-family: 'Raleway', sans-serif;
+  font-size: 22px;
+  color: #ffffff;
+}
+#extFeatures13-6e H4 {
+  color: #ffffff;
+  text-align: left;
+  font-family: 'Raleway', sans-serif;
+  font-size: 17px;
+}
+#extFeatures13-6e .date P {
+  color: #f7da64;
+  font-size: 22px;
+  font-family: 'Raleway', sans-serif;
+}
+#extFeatures13-6e .mbr-section-title SPAN {
+  font-size: 19px;
+}
+#extFeatures13-6e SPAN {
+  font-family: 'Raleway', sans-serif;
+  font-size: 17px;
+}
+#extFeatures13-6e DIV {
+  font-family: 'Raleway', sans-serif;
+  font-size: 17px;
+}
+#extFeatures13-6e .date SPAN {
+  font-size: 20px;
+}
+#extProgressBar5-6f H2 {
+  font-size: 25px;
+  font-family: 'Raleway', sans-serif;
+}
+#extProgressBar5-6f .progressbar-title p,
+#extProgressBar5-6f .progressbar-number,
+#extProgressBar5-6f .progressbar-number + span {
+  font-family: 'Raleway', sans-serif;
+  font-size: 17px;
+}
+#extToggle1-6l P {
+  color: #ffffff;
+}
+#footer1-6h P {
+  font-size: 14px;
+}
